--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 	<header>马踏棋盘问题</header>
+	<button type="button" class="btn btn-default newRandomBtn">生成新的初始位置</button>
+	<button type="button" class="btn btn-default nextAnswerBtn">生成下一组解</button>
 	<div class="container">
 		<div class="chessboard">
 			
@@ -15,7 +17,6 @@
 	</div>
 	<script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="./js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="./js/stack.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
