--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-	<header>马踏棋盘问题</header>
-	<button type="button" class="btn btn-default newRandomBtn">生成新的初始位置</button>
-	<button type="button" class="btn btn-default nextAnswerBtn">生成下一组解</button>
+	<div class="button-group">
+		<button type="button" class="btn btn-default funcbtn restartBtn">重新开始</button>
+		<button type="button" class="btn btn-default funcbtn nextAnswerBtn">下一组解</button>
+		<button type="button" class="btn btn-default funcbtn showAnimaBtn">动画演示</button>
+	</div>
 	<div class="container">
 		<div class="chessboard">
 			
