--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 	<div class="button-group">
-		<button type="button" class="btn btn-default funcbtn restartBtn">重新开始</button>
-		<button type="button" class="btn btn-default funcbtn nextAnswerBtn">下一组解</button>
-		<button type="button" class="btn btn-default funcbtn showAnimaBtn">动画演示</button>
+		<button type="button" class="btn btn-primary funcbtn restartBtn">重新开始</button>
+		<button type="button" class="btn btn-success funcbtn nextAnswerBtn">下一组解</button>
+		<button type="button" class="btn btn-info funcbtn showAnimaBtn disabled" disabled="disabled">动画演示</button>
 	</div>
 	<div class="container">
 		<div class="chessboard">
