--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>马踏棋盘</title>
+	<title>八皇后</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
 	<div class="button-group">
-		<button type="button" class="btn btn-primary funcbtn restartBtn">重新开始</button>
-		<button type="button" class="btn btn-success funcbtn nextAnswerBtn">下一组解</button>
-		<button type="button" class="btn btn-info funcbtn showAnimaBtn disabled" disabled="disabled">动画演示</button>
+		<form role="form" class="form-inline" onsubmit="return false;">
+			<div class="form-group control-btn-group">
+				<button type="button" class="btn btn-danger funcbtn lastAnswerBtn">上一组解</button>
+				<button type="button" class="btn btn-success funcbtn nextAnswerBtn">下一组解</button>
+				<div class="number-input-group">
+					<input type="text"  class="number-input">
+					<button type="button" class="btn btn-success funcbtn numberNAnswer">第n组解</button>
+				</div>
+			</div>
+		</form>
 	</div>
+	<p class="current-cur">当前是第<span class="number"></span>组解</p>
 	<div class="container">
 		<div class="chessboard">
 			
