--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>八皇后</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap-theme.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
@@ -25,8 +25,8 @@
 			
 		</div>
 	</div>
-	<script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="./js/bootstrap.min.js"></script>
+	<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+	<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
