--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>八皇后</title>
 	<meta charset="utf-8">
-	<link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap-theme.css" rel="stylesheet">
+	<link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap-min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
